chapter-video-form + MUX setup

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,4 +82,9 @@ body,
   }
 }
 
-/* @import "@uploadthing/react/style.css" */
+.ql-container{
+  font-size: 16px !important;
+
+}
+
+@import "@uploadthing/react/style.css"
